--- a/portfolio2023_vite/package.json
+++ b/portfolio2023_vite/package.json
@@ -16,7 +16,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.4"
   }
 }
