--- a/portfolio2023_vite/package.json
+++ b/portfolio2023_vite/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "vite-plugin-svgr": "^2.4.0"
   },
