--- a/deploy_vite/manifest.json
+++ b/deploy_vite/manifest.json
@@ -23,14 +23,80 @@
     "file": "assets/notion_icon-1ea49ff9.svg",
     "src": "../src/svg/header/notion_icon.svg"
   },
+  "_page-1a256918.js": {
+    "css": [
+      "assets/page-185337c5.css"
+    ],
+    "file": "assets/page-1a256918.js"
+  },
+  "_page-23f32011.js": {
+    "css": [
+      "assets/page-807426ac.css"
+    ],
+    "file": "assets/page-23f32011.js"
+  },
+  "_page-3867e2ac.js": {
+    "css": [
+      "assets/page-807426ac.css"
+    ],
+    "file": "assets/page-3867e2ac.js"
+  },
+  "_page-552ba507.js": {
+    "css": [
+      "assets/page-185337c5.css"
+    ],
+    "file": "assets/page-552ba507.js"
+  },
+  "_page-57acf8fd.js": {
+    "css": [
+      "assets/page-185337c5.css"
+    ],
+    "file": "assets/page-57acf8fd.js"
+  },
+  "_page-784c35c6.js": {
+    "css": [
+      "assets/page-185337c5.css"
+    ],
+    "file": "assets/page-784c35c6.js"
+  },
+  "_page-7be21054.js": {
+    "css": [
+      "assets/page-185337c5.css"
+    ],
+    "file": "assets/page-7be21054.js"
+  },
+  "_page-8b4df4aa.js": {
+    "css": [
+      "assets/page-185337c5.css"
+    ],
+    "file": "assets/page-8b4df4aa.js"
+  },
   "_page-9422218c.js": {
     "css": [
       "assets/page-185337c5.css"
     ],
     "file": "assets/page-9422218c.js"
   },
+  "_page-9dae9594.js": {
+    "css": [
+      "assets/page-185337c5.css"
+    ],
+    "file": "assets/page-9dae9594.js"
+  },
+  "_page-b2949bc6.js": {
+    "css": [
+      "assets/page-807426ac.css"
+    ],
+    "file": "assets/page-b2949bc6.js"
+  },
+  "_page-e9112870.js": {
+    "css": [
+      "assets/page-807426ac.css"
+    ],
+    "file": "assets/page-e9112870.js"
+  },
   "page.css": {
-    "file": "assets/page-185337c5.css",
+    "file": "assets/page-807426ac.css",
     "src": "page.css"
   }
 }
