--- a/deploy_vite/manifest.json
+++ b/deploy_vite/manifest.json
@@ -53,11 +53,23 @@
     ],
     "file": "assets/page-57acf8fd.js"
   },
+  "_page-5bf60c1d.js": {
+    "css": [
+      "assets/page-807426ac.css"
+    ],
+    "file": "assets/page-5bf60c1d.js"
+  },
   "_page-784c35c6.js": {
     "css": [
       "assets/page-185337c5.css"
     ],
     "file": "assets/page-784c35c6.js"
+  },
+  "_page-7aa1ef1a.js": {
+    "css": [
+      "assets/page-807426ac.css"
+    ],
+    "file": "assets/page-7aa1ef1a.js"
   },
   "_page-7be21054.js": {
     "css": [
@@ -88,6 +100,12 @@
       "assets/page-807426ac.css"
     ],
     "file": "assets/page-b2949bc6.js"
+  },
+  "_page-b83727ad.js": {
+    "css": [
+      "assets/page-807426ac.css"
+    ],
+    "file": "assets/page-b83727ad.js"
   },
   "_page-e9112870.js": {
     "css": [
