페이지 전환 효과 틀 완료

--- a/portfolio2023_vite/.prettierrc
+++ b/portfolio2023_vite/.prettierrc
@@ -3,7 +3,8 @@
     {
       "files": "**/*.jsx",
       "options": {
-        "singleAttributePeLline": false
+        "singleAttributePeLline": false,
+        "arrowParens": "avoid"
       }
     }
   ]
