--- a/deploy_vite/manifest.json
+++ b/deploy_vite/manifest.json
@@ -27,9 +27,11 @@
     "file": "assets/notion_icon-1ea49ff9.svg",
     "src": "../src/svg/header/notion_icon.svg"
   },
-  "_page-e00d4570.js": {
-    "css": ["assets/page-8dc26558.css"],
-    "file": "assets/page-e00d4570.js"
+  "_page-4bc91d7d.js": {
+    "css": [
+      "assets/page-8dc26558.css"
+    ],
+    "file": "assets/page-4bc91d7d.js"
   },
   "page.css": {
     "file": "assets/page-8dc26558.css",
