--- a/portfolio2023_vite/package.json
+++ b/portfolio2023_vite/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview -watch"
   },
   "dependencies": {
-    "react": "^18.2.0",
+    "framer-motion": "^10.12.4",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "vite-plugin-svgr": "^2.4.0"
@@ -20,10 +21,11 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "react": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4"
+    "vite": "^4.2.2"
   }
 }
