--- a/portfolio2023_vite/package.json
+++ b/portfolio2023_vite/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview -watch"
   },
   "dependencies": {
-    "framer-motion": "^10.12.4",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-scroll-motion": "^0.3.2",
     "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "vite-plugin-svgr": "^2.4.0"
