--- a/portfolio2023_vite/.prettierrc
+++ b/portfolio2023_vite/.prettierrc
@@ -3,7 +3,7 @@
     {
       "files": "**/*.jsx",
       "options": {
-        "singleAttributePeLline": false,
+        "singleAttributePerLine": false,
         "arrowParens": "avoid"
       }
     }
