ipad chrome 빈 화면 이슈 - recoil value에 함수 적용시 () 제거로 해결

--- a/portfolio2023_vite/package.json
+++ b/portfolio2023_vite/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://graffitoryu.github.io/portfolio2023/deploy_vite/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
