--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -23,5 +23,8 @@
     "styled-components": "^6.0.0-rc.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
