테마 메뉴 작업

--- a/portfolio2023_next/.prettierrc
+++ b/portfolio2023_next/.prettierrc
@@ -6,6 +6,14 @@
         "singleAttributePeLline": false,
         "arrowParens": "avoid"
       }
+    },
+    {
+      "files": "**/*.scss",
+      "options": {
+        "singleAttributePerLine": false,
+        "proseWrap": "preserve",
+        "embeddedLanguageFormatting": "off"
+      }
     }
   ]
 }
