--- a/portfolio2023_next/.eslintrc.json
+++ b/portfolio2023_next/.eslintrc.json
@@ -12,12 +12,20 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "react-hooks",
+    "import",
+    "jsx-a11y",
+    "prettier"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:prettier/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@next/next/recommended",
+    "next",
     "next/core-web-vitals",
     "prettier"
   ],
