--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/parser": "^5.59.6",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
     "sass": "^1.62.1"
