--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "gsap": "^3.11.5",
     "next": "^13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.1",
     "tailwindcss": "3.3.2",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.8",
+    "@types/react-transition-group": "^4.4.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
