--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.1",
     "gsap": "^3.11.5",
     "next": "^13.4.2",
     "postcss": "8.4.23",
