json 데이터 firebase로 관리

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ reference
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+.env
