--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -12,22 +12,22 @@
     "@svgr/webpack": "^8.0.1",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.12",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "^20.1.4",
+    "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "firebase": "^9.22.1",
     "gsap": "^3.11.5",
-    "next": "^13.4.2",
+    "next": "^13.4.4",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
@@ -39,6 +39,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
-    "sass": "^1.62.1"
+    "sass": "^1.63.2"
   }
 }
