--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -10,18 +10,16 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.0.1",
-    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query": "^4.29.15",
     "@tanstack/react-query-devtools": "^4.29.12",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.4",
+    "clipboard": "^2.0.11",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.6",
     "firebase": "^9.22.1",
     "gsap": "^3.12.1",
-    "next": "^13.4.5",
-    "postcss": "^8.4.23",
+    "next": "^13.4.6",
+    "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
@@ -31,14 +29,17 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
-    "sass": "^1.63.2"
+    "sass": "^1.63.5"
   }
 }
