--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -15,14 +15,15 @@
     "autoprefixer": "^10.4.14",
     "clipboard": "^2.0.11",
     "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.6",
-    "firebase": "^9.22.1",
+    "eslint-config-next": "^13.4.7",
+    "firebase": "^9.23.0",
     "gsap": "^3.12.1",
     "next": "^13.4.6",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
+    "smooth-scrollbar": "^8.8.4",
     "styled-components": "^6.0.0-rc.3",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
