--- a/portfolio2023_next/tsconfig.json
+++ b/portfolio2023_next/tsconfig.json
@@ -24,6 +24,7 @@
       "img/*": ["./public/img/*"]
     }
   },
+  "files": ["node_modules/gsap/types/index.d.ts"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
