프로젝트 데이터 업데이트

--- a/portfolio2023_next/public/json/projects.json
+++ b/portfolio2023_next/public/json/projects.json
@@ -3,13 +3,13 @@
     "code": "teamsolution",
     "summary": {
       "title": ["TeamSolution"],
-      "desc": "실시간 텔레메트리 데이터 모니터링 및 실시간 주행 관제 솔루션",
-      "role": ["프론트엔드 개발", "웹 퍼블리싱", "유지보수"],
+      "desc": "트랙을 주행하는 차량의 텔레메트리 데이터를 실시간으로 모니터링하는 웹 서비스",
+      "role": ["Frontend", "Markup"],
       "period": ["2019-11-01T00:00:00", "2022-11-01T00:00:00"]
     },
     "service": {
       "provider": "3SECONDZ",
-      "platform": "웹 기반 솔루션",
+      "serviceType": "웹 기반 솔루션",
       "desc": [
         "자사 하드웨어 제품 XYRO를 통한 텔레메트리 데이터를, 실시간으로 웹 페이지에 시각화하여 각 차량의 상태를 모니터링하는 서비스를 메인으로 함",
         "크게 개인용 페이지 / 매니저 페이지 / 솔루션 페이지로 구성",
@@ -45,39 +45,20 @@
       ]
     },
     "experience": {
-      "stacks": [
-        "html",
-        "css",
-        "javascript",
-        "jquery",
-        "sass",
-        "ejs",
-        "d3.js",
-        "google_maps_api",
-        "zeplin",
-        "ajax",
-        "websocket",
-        "json",
-        "git"
-      ],
+      "stacks": {
+        "languages": ["HTML", "CSS", "JavaScript", "SCSS", "EJS"],
+        "frameworks": ["jQuery", "D3.js", "Google_Maps_API", "flatpickr"],
+        "data": ["AJAX", "WebSocket", "JSON"],
+        "collaboration": ["Git", "Github", "Zeplin"]
+      },
       "desc": [
-        "입사 당시 어느정도 기반이 구축된 상태에서 업무 투입",
-        "Node.js + Gulp 기반 환경에서의 첫 실무 경험",
-        "Scss 첫 실무 활용",
-        "모바일 앱 웹뷰 페이지에 대한 반응형 처리",
-        "메인 라이브러리로 jQuery를 활용",
-        "그래픽 요소(주행트랙, 주행위치, 라인차트 등)는 d3.js로 구현",
-        "faye를 통해 웹소켓 채널 수신 및 JSON 데이터 활용",
-        "jQuery Ajax를 통해 데이터 송수신 처리",
-        {
-          "depth1": "위젯 기능 중 일부에 대한 후속 도입 시 개발 참여",
-          "depth2": [
-            "컴포넌트 재생성 기법을 활용",
-            "Ajax로 관련 데이터 조회하여 요소 재생성",
-            "웹소켓을 통핸 데이터 수신으로 현재 상태 동기화 처리",
-            "속도, 기어, G plot 등의 실시간 정보를 표현하는 HUD 위젯 구현"
-          ]
-        }
+        "이전 경력에서는 단순 마크업과 사용자 DOM 이벤트 구현에 대한 경험만 해오다가, 이 프로젝트를 통해 처음으로 프론트엔드 작업 경험",
+        "AJAX를 통한 RESTful API 호출",
+        "AJAX를 통해 받은 JSON 데이터의 가공 및 업데이트 처리",
+        "WebSocket을 통한 실시간 양방향 데이터 송수신",
+        "D3.js를 활용한 SVG 그래픽 생성 및 업데이트",
+        "CSS를 활용하여 HUD 그래픽에 실시간 데이터 연동 처리",
+        "컴포넌트 및 각 기능에 대한 모듈화 작업을 지속적으로 시도하였고 진행까지 하였으나 내부 사정으로 완료하지 못함"
       ]
     },
     "media": [
@@ -99,13 +80,13 @@
     "code": "racesolution",
     "summary": {
       "title": ["RaceSolution", "& HUD for broadcast"],
-      "desc": "국내 최대 모터스포츠 경기 SUPERRACE의 관제 솔루션 및 방송 중계 오버레이 HUD",
-      "role": ["프론트엔드 개발", "웹 퍼블리싱", "유지보수"],
+      "desc": "국내 최대 레이싱 경기 SUPERRACE의 실시간 관제 솔루션 & 방송 중계 HUD 오버레이 서비스",
+      "role": ["Frontend", "Markup"],
       "period": ["2022-04-01T00:00:00", "2022-10-01T00:00:00"]
     },
     "service": {
       "provider": "3SECONDZ",
-      "platform": "웹 기반 솔루션",
+      "serviceType": "웹 기반 솔루션",
       "desc": [
         "모터스포츠 경기의 실시간 주행 관제를 위한 솔루션으로 개발",
         "유튜브를 포함한 경기 중계 화면에서, 선수 개인 주행화면 송출 시 오버레이되는 HUD 화면 개발"
@@ -132,28 +113,20 @@
       ]
     },
     "experience": {
-      "stacks": [
-        "html",
-        "css",
-        "javascript",
-        "jquery",
-        "sass",
-        "ejs",
-        "d3.js",
-        "google_maps_api",
-        "zeplin",
-        "ajax",
-        "websocket",
-        "json",
-        "git"
-      ],
+      "stacks": {
+        "languages": ["HTML", "CSS", "JavaScript", "SCSS", "EJS"],
+        "frameworks": ["jQuery", "D3.js", "Google_Maps_API"],
+        "data": ["AJAX", "WebSocket", "JSON"],
+        "collaboration": ["Git", "Github", "Zeplin", "Figma"]
+      },
       "desc": [
-        "기존의 TeamSolution과 동일한 기술을 활용하여, 기능을 확장",
-        "Ajax를 통해 엔트리를 조회하여 jQuery로 관제할 엔트리 테이블을 재생성",
-        "재생성된 이벤트에 대한 이벤트 재부여 및 다중 선택항목에 대해 일괄 API 호출 등 기능 구현",
-        "방송 화면의 오버레이될 HUD 컨트롤 페이지 개발",
-        "실시간으로 수신받은 텔레메트리 데이터를, CSS를 활용하여 SVG 이미지를 움직여 표현하도록 구현",
-        "Ajax를 통한 경기선수 검색 기능 구현"
+        "TeamSolution의 기능 확장 프로젝트",
+        "작업 간에 기획/백엔드와 활발한 소통으로 진행, 대부분의 레이아웃 구성은 기존 테마를 상속받아 직접 레이아웃 구성",
+        "AJAX를 통한 데이터 조회 및 DB 저장, WebSocket을 통해 데이터 모니터링 및 각 클라이언트에 제어 전파",
+        "비동기 이슈 해결을 위해, 미들웨어에서 처리된 순위 데이터를 WebSocket을 통해 수신받아 적용",
+        "경기장 내 네트워크 이슈 해결을 위해 비동기 프로세스를 동기 프로세스로 전환 하는 등의 성능 최적화 리팩토리",
+        "HUD 위젯의 매커니즘을 방송용 오버레이를 위한 HUD 컨트롤 페이지로 작업 (채널A, 유튜브 등 생중계 화면에 활용)",
+        "자막 중계를 위한 메신저의 디자인 및 UI 구현, 프론트엔드 작업 진행"
       ]
     },
     "media": [
@@ -181,13 +154,13 @@
     "code": "solutionmaster",
     "summary": {
       "title": ["SolutionMaster"],
-      "desc": "기관 및 R&D 목적으로 다수의 주행 차량을 관리 및 관제하기 위한 종합 관리 솔루션",
-      "role": ["프론트엔드 개발", "웹 퍼블리싱", "유지보수"],
+      "desc": "다수의 차량을 그룹별로 제어하는 기관용 종합 주행 관제 솔루션",
+      "role": ["Frontend", "Markup"],
       "period": ["2021-02-01T00:00:00", "2022-12-01T00:00:00"]
     },
     "service": {
       "provider": "3SECONDZ",
-      "platform": "웹 기반 솔루션",
+      "serviceType": "웹 기반 솔루션",
       "desc": [
         "제한없는 다수의 차량에 대한 주행 정보 관리 및 실시간 텔레메트리 관제 서비스 제공",
         "차량 관리만을 위한 관리 페이지와, 실시간 모니터링 및 조작을 위한 관제 페이지, 리플레이 페이지 제공"
@@ -202,28 +175,22 @@
       ]
     },
     "experience": {
-      "stacks": [
-        "html",
-        "css",
-        "javascript",
-        "jquery",
-        "sass",
-        "ejs",
-        "d3.js",
-        "google_maps_api",
-        "zeplin",
-        "ajax",
-        "websocket",
-        "json",
-        "git"
-      ],
+      "stacks": {
+        "languages": ["HTML", "CSS", "JavaScript", "SCSS", "EJS"],
+        "frameworks": ["jQuery", "D3.js", "Google_Maps_API", "flatpickr"],
+        "data": ["AJAX", "WebSocket", "JSON"],
+        "collaboration": ["Git", "Github", "Zeplin", "Figma"]
+      },
       "desc": [
-        "등록된 여러 정보를 일괄 관리하기 위한 매니저 페이지 제공을 위해 Ajax와 컴포넌트 재생성 등을 활용",
-        "모달을 통한 정보 편집 기능 구현",
-        "주행 세션 개설 시, 위한 컨트롤러에서 히든 트랙 기능을 추가",
-        "주행 세션 개설 시, 원하는 시간 예약을 위한 시간 선택 기능 구현",
-        "웹소켓을 통해, 현재 개설된 세션 정보에 따라 인디케이터가 동작하도록 구현",
-        "웹소켓을 통해, 등록된 자사 하드웨어의 상태 실시간 모니터링"
+        "RaceSolution의 기능 확장 + 신규 디자인과 신규 기능 등이 추가된 매니저 페이지 리뉴얼",
+        "프로토타입을 공유하며, 기획/디자인/백엔드와 활발한 소통으로 프로젝트 참여",
+        "팀매니저 페이지와 동일한 URL을 권한에 따라 렌더링 처리",
+        "차량, 드라이버, 주행 그룹, 하드웨어 등의 각 아이템에 대한 다수의 일괄 관리 콘솔 마크업 및 프론트엔드 참여",
+        "세션 컨트롤의 트랙 선택, 예약 기능(달력, 시간 등, flatpickr 활용), 세션 개설 상태 등의 마크업 및 프론트엔드 참여",
+        "주행 스케쥴 관리를 위한 스케쥴 매니저 기능 마크업 구현 작업, 프론트엔드 설계 참여",
+        "텔레메트리 모니터링 관제 페이지 내의 “주행 그룹” 운영 시스템 적용을 위한 마크업 및 프론트엔드 참여",
+        "기존 HOST 단위의 리플레이 서비스에서 세션 단위의 리플레이 서비스 마크업 및 프론트엔드 참여",
+        "이 프로젝트에서 컴포넌트 별로 생성 및 관리하는 체계 첫 도입 시도"
       ]
     },
     "media": [
@@ -245,13 +212,13 @@
     "code": "lapvslap",
     "summary": {
       "title": ["Session Report;", "Lap vs Lap"],
-      "desc": "주행 세션 데이터 분석 서비스",
-      "role": ["프론트엔드 개발", "웹 퍼블리싱", "유지보수"],
+      "desc": "주행 세션을 분석하고, 다른 주행 데이터와 비교하여 시각화하는 웹 솔루션",
+      "role": ["Frontend", "Markup"],
       "period": ["2021-07-01T00:00:00", "2022-12-01T00:00:00"]
     },
     "service": {
       "provider": "3SECONDZ",
-      "platform": "웹 기반 솔루션",
+      "serviceType": "웹 기반 솔루션",
       "desc": [
         "분석 대상 드라이버에 대한 주행 데이터 분석을 제공",
         "권한에 따라 접근 가능한 주행 데이터에 대한 비교 분석 서비스 제공"
@@ -272,26 +239,18 @@
       ]
     },
     "experience": {
-      "stacks": [
-        "html",
-        "css",
-        "javascript",
-        "jquery",
-        "sass",
-        "ejs",
-        "d3.js",
-        "zeplin",
-        "ajax",
-        "json",
-        "git"
-      ],
+      "stacks": {
+        "languages": ["HTML", "CSS", "JavaScript", "SCSS", "EJS"],
+        "frameworks": ["jQuery", "D3.js", "d3-queue", "dom-to-image", "jsPdf"],
+        "data": ["AJAX", "WebSocket", "JSON"],
+        "collaboration": ["Git", "Github", "Zeplin", "Figma"]
+      },
       "desc": [
-        "TeamSolution을 기반으로 하나, 주행 트랙 표현을 위한 매커니즘을 재구성하여 모듈화 리뉴얼 진행",
-        "d3.js를 활용하여 텔레메트리 데이터 채널에 대한 라인 차트를 생성, 확대/축소/패닝 등 탐색을 위한 인터랙션 구현",
-        "트랙 탐색을 위한 확대/축소/패닝 동작에 대해, 마우스, 트랙패드, 터치 인터랙션을 각각 구현",
-        "주행 데이터의 기준 인덱스 별로 재생 동작 구현",
-        "주행 데이터 비교를 위해, 주행 세션 데이터에 대한 전역 상태객체를 두고 상태 데이터 교체 운용을 위한 체계 구축",
-        "데이터의 탐색 기준 인덱스에 대해 상호 교체 운용을 위한 체계 구축"
+        "입사 전에 진행이 중단되었던 프로젝트에 대한 작업 재개를 위해 기획단계부터 다시 시작",
+        "기존 디자인 시안에 대해 기획 변경에 따라 재작업이 필요하였으나, 테마에 맞게 직접 레이아웃 디자인 작업 담당",
+        "마크업과 프론트엔드 기능에 대해 처음부터 다시 시작하면서, 컴포넌트/모듈 단위 개발 본격적으로 시작",
+        "동기 프로세스를 가진 AJAX 데이터 호출 구조로 구성",
+        "주행 세션에 대한 출력용 드라이빙 리포트 마크업 및 프론트엔드 참여"
       ]
     },
     "media": [
