--- a/portfolio2023_next/package.json
+++ b/portfolio2023_next/package.json
@@ -17,14 +17,14 @@
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.7",
     "firebase": "^9.23.0",
-    "gsap": "^3.12.1",
-    "next": "^13.4.6",
+    "gsap": "^3.12.2",
+    "next": "^13.4.9",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "smooth-scrollbar": "^8.8.4",
-    "styled-components": "^6.0.0-rc.3",
+    "styled-components": "^6.0.3",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
@@ -40,6 +40,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
-    "sass": "^1.63.5"
+    "sass": "^1.63.6"
   }
 }
