build error fix

--- a/portfolio2023_next/.eslintrc.json
+++ b/portfolio2023_next/.eslintrc.json
@@ -12,14 +12,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "react-hooks",
-    "import",
-    "jsx-a11y",
-    "prettier"
-  ],
+  "plugins": ["react", "@typescript-eslint", "import", "jsx-a11y", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:prettier/recommended",
