--- a/portfolio2023_next/tsconfig.json
+++ b/portfolio2023_next/tsconfig.json
@@ -21,10 +21,14 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "img/*": ["./public/img/*"]
+      "img/*": ["./public/img/*"],
+      "@vercel/analytics/react": ["./node_modules/@vercel/analytics/dist/react"]
     }
   },
-  "files": ["node_modules/gsap/types/index.d.ts"],
+  "files": [
+    "node_modules/gsap/types/index.d.ts",
+    "node_modules/@vercel/analytics/dist/react/index.d.ts"
+  ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
