--- a/portfolio2023_next/.prettierrc
+++ b/portfolio2023_next/.prettierrc
@@ -3,7 +3,7 @@
     {
       "files": "**/*.tsx",
       "options": {
-        "singleAttributePeLline": false,
+        "singleAttributePerLine": false,
         "arrowParens": "avoid"
       }
     },
