--- a/portfolio2023_vite/package.json
+++ b/portfolio2023_vite/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview -watch"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react-dom": "^18.2.0",
